--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "customtkinter",
         "ffmpg",
         "fourcc",
+        "fromarray",
         "padx",
         "pady",
         "textvariable",
